[package]
name = "bpe"
version = "0.1.0"
edition = "2021"

[lib]
name = "bpe"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
numpy = "0.18"
ndarray = { version = "0.15.6", features = ["rayon"] }
rayon = "1.7"
num-traits = "0.2"
indicatif = "0.17.0"
fxhash = "0.2"
regex = "1.10.2"

[profile.release]
debug = true